--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,5 @@ env:
       # - OS=debian DIST=buster
 
 
-before_install:
-  - sudo apt-get update
-  - sudo apt-get -y install curl wget build-essential
-
 script:
-  - sudo bash <(curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered)
+  - bash <(curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered)
