--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ env:
 
 
 script:
-  - bash <(curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered)
+  - curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh
+  echo y | bash nr.sh
