--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 
-
 os:
   - linux
 
@@ -18,4 +17,4 @@ env:
 
 script:
   - curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh
-  echo y | bash nr.sh
+  - echo y | bash nr.sh
