--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ env:
 
 before_script:
   - sudo echo $NVM_DIR
+  - sudo echo /etc/os_release
   - sudo echo $(node -v)
   - sudo rm -rf $NVM_DIR ~/.npm ~/.bower
+  - sudo echo $(node -v)
 
 script:
   - curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh
