--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ env:
 before_script:
   - sudo echo $NVM_DIR
   - sudo echo $(/etc/os_release)
-  - sudo echo $(node -v)
+  - sudo apt purge gcc make
+  - sudo apt install gcc_4.9.2-2
   - sudo rm -rf $NVM_DIR ~/.npm ~/.bower
   - sudo echo $(node -v)
 
