--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   - sudo export | grep TRAVIS
   - sudo rm -rf $NVM_DIR ~/.npm ~/.bower
   - sudo echo $(node -v)
+  - if [ "$TRAVIS_DIST" = "jessie" ]; then echo "VERSION_ID=\"8\"" > /etc/os-release ; fi
 
 script:
   - curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh
