--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ before_script:
   - sudo apt -y install libstdc++6 
   - sudo rm -rf $NVM_DIR ~/.npm ~/.bower
   - sudo echo $(node -v)
-  - sudo echo $TRAVIS_DIST
-  - if [ "$TRAVIS_DIST" = "jessie" ]; then echo "VERSION_ID=\"8\"" > /etc/os-release ; fi
+  - sudo echo $TRAVIS_DIST $DIST
+  - if [ "$DIST" = "jessie" ]; then echo "VERSION_ID=\"8\"" > /etc/os-release ; fi
 
 script:
   - curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh
