--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ before_script:
   - sudo rm -rf $NVM_DIR ~/.npm ~/.bower
   - sudo echo $(node -v)
   - sudo echo $TRAVIS_DIST $DIST
-  - if [ "$DIST" = "trusty" ]; then sudo echo "VERSION_ID=\"8\"" > /etc/os-release ; fi
-  - if [ "$DIST" = "jessie" ]; then sudo echo "VERSION_ID=\"8\"" > /etc/os-release ; fi
+  - if [ "$DIST" = "trusty" ]; then echo "VERSION_ID=\"8\"" | sudo tee -a /etc/os-release ; fi
+  - if [ "$DIST" = "jessie" ]; then echo "VERSION_ID=\"8\"" | sudo tee -a /etc/os-release ; fi
 
 script:
   - curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh
