--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_script:
   - sudo echo $TRAVIS_DIST $DIST
   - if [ "$DIST" = "trusty" ]; then echo "VERSION_ID=\"8\"" | sudo tee -a /etc/os-release ; fi
   - if [ "$DIST" = "jessie" ]; then echo "VERSION_ID=\"8\"" | sudo tee -a /etc/os-release ; fi
+  - cat /etc/os-release | grep VERSION_ID | cut -d '"' -f 2
 
 script:
   - curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh
