--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
       - OS=ubuntu DIST=trusty
       - OS=ubuntu DIST=xenial
       - OS=ubuntu DIST=bionic
+      - OS=ubuntu DIST=cosmic
       - OS=ubuntu DIST=disco
       - OS=ubuntu DIST=eoan
       - OS=debian DIST=jessie
