--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,16 @@ matrix:
     - env: OS='centos:7'
     - env: OS='centos:latest'
     - env: OS='fedora:latest'
+    - env: OS='ubuntu:16.04'
     - env: OS='ubuntu:18.04'
     - env: OS='ubuntu:19.04'
     - env: OS='debian:jessie'
+    - env: OS='debian:stretch'
     - env: OS='debian:buster'
+    - env: OS='debian:bullseye'
 
 before_install:
   - docker pull $OS
-
-# install:
-#   - docker run -d $OS /bin/sh -c "provision container if you do not have a prebuilt image and are instead using base images"
 
 script:
   - echo "OS is $OS"
@@ -26,5 +26,5 @@ script:
     elif [ "$OS" = "fedora:latest" ]; then
       docker run -it $OS /bin/sh -c "curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/rpm/update-nodejs-and-nodered > nr.sh && printf '%s\n' Y N Y | bash nr.sh"; 
     else 
-      docker run -it $OS /bin/sh -c "apt update && apt install curl && curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh && printf '%s\n' Y Y Y | bash nr.sh"; 
+      docker run -it $OS /bin/sh -c "apt -y update && apt -yq install curl && curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh && printf '%s\n' Y Y Y | bash nr.sh";      
     fi
