--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ script:
     elif [ "$OS" = "fedora:latest" ]; then
       docker run -it $OS /bin/sh -c "curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/rpm/update-nodejs-and-nodered > nr.sh && printf '%s\n' Y N Y | bash nr.sh"; 
     else 
-      docker run -it $OS /bin/sh -c "apt-get update && apt-get -y install curl && curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh && printf '%s\n' Y Y Y | bash nr.sh";      
+      docker run -it $OS /bin/sh -c "apt-get update && apt-get -y install curl sudo && curl -sL https://raw.githubusercontent.com/node-red/linux-installers/master/deb/update-nodejs-and-nodered > nr.sh && printf '%s\n' Y Y Y | bash nr.sh";      
     fi
