add delay for timeset comment to service

--- a/resources/nodered.service
+++ b/resources/nodered.service
@@ -18,12 +18,16 @@ Environment="NODE_OPTIONS=--max_old_space_size=512"
 #Environment="HTTP_PROXY=my.httpproxy.server.address"
 # uncomment the next line for a more verbose log output
 #Environment="NODE_RED_OPTIONS=-v"
-#ExecStart=/usr/bin/env node $NODE_OPTIONS red.js $NODE_RED_OPTIONS
+# uncomment next line if you need to wait for time sync before starting
+#ExecStartPre=/bin/bash -c '/bin/journalctl -b -u systemd-timesyncd | /bin/grep -q "systemd-timesyncd.* Synchronized to time server"'
+
 ExecStart=/usr/bin/env node-red-pi $NODE_OPTIONS $NODE_RED_OPTIONS
+#ExecStart=/usr/bin/env node $NODE_OPTIONS red.js $NODE_RED_OPTIONS
 # Use SIGINT to stop
 KillSignal=SIGINT
 # Auto restart on crash
 Restart=on-failure
+RestartSec=20
 # Tag things in the log
 SyslogIdentifier=Node-RED
 #StandardOutput=syslog
